# task_assistant_AI

./: .gitignore  .vercelignore  CLAUDE.md  README.md  TaskPulse_Analysis_Report.docx  TaskPulse_Analysis_Report.js  ai_agent_test.py  docker-compose.yml  index.html  package.json  pyproject.toml  requirements.txt  vercel.json  workflow.md
.claude/: launch.json
.github/workflows/: ci-cd.yml
Frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
Frontend/e2e/: 01-landing.spec.ts  02-auth.spec.ts  03-dashboard.spec.ts  04-task-creation.spec.ts  05-ai-task-creator.spec.ts  06-task-management.spec.ts  07-navigation.spec.ts  08-settings.spec.ts  09-task-detail.spec.ts  10-task-filters-sort.spec.ts  11-checkins.spec.ts  12-ai-command.spec.ts  13-settings-logic.spec.ts  auth.setup.ts  helpers.ts
Frontend/src/: App.tsx  google.d.ts  index.css  main.tsx
api/: index.py
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pytest.ini  requirements.txt  run.py  schema.sql  supabase_schema.sql
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py  supabase_client.py
backend/scripts/: __init__.py  migrate_to_supabase.py  seed_data.py  seed_test_data.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_automation.py  test_checkins.py  test_health.py  test_predictions.py  test_skills.py  test_tasks.py  test_workforce.py
docs/reports/: TaskPulse_AI_Product_Spec (3).xlsx  TaskPulse_E2E_Test_Report.docx  (+4 more)
src/: App.tsx
(+165 files in other folders)
