[project]
name = "taskpulse-api"
version = "1.0.0"
description = "TaskPulse AI Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.3",
    "pgvector>=0.2.5",
    "supabase>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.2",
    "email-validator>=2.1.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "tiktoken>=0.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
]

[project.scripts]
app = "backend.app.main:app"
